update with graph and emails

--- a/LearningToListen/app/src/main/res/values/strings.xml
+++ b/LearningToListen/app/src/main/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="orientation_right">on the right</string>
     <string name="orientation_both">face to face</string>
     <string name="saving">SAVE</string>
+    <string name="send_email">World you like to have a copy of your results?</string>
+    <string name="guide_send_email">Edit your email address and press OK to sned</string>
+    <string name="button_ok">OK</string>
+    <string name="button_cancel">CANCEL</string>
     <string-array name="difficulties">
         <item>EASY</item>
         <item>NORMAL</item>
