--- a/LearningToListen/app/src/main/res/values/strings.xml
+++ b/LearningToListen/app/src/main/res/values/strings.xml
@@ -6,15 +6,15 @@
     <string name="setting">SETTINGS</string>
     <string name="information">INFO</string>
     <string name="content_information">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
-    <string name="choose_animals">Choose your favorite animals</string>
-    <string name="choose_speakers">Choose speakers</string>
-    <string name="choose_difficulties">Choose difficulties</string>
-    <string name="choose_orientation">Choose orientation</string>
+    <string name="choose_animals">Choose your favorite animals\n</string>
+    <string name="choose_speakers">\nChoose speakers\n</string>
+    <string name="choose_difficulties">\nChoose difficulties\n</string>
+    <string name="choose_orientation">\nChoose orientation\n</string>
     <string name="orientation_left">on the left</string>
     <string name="orientation_right">on the right</string>
     <string name="orientation_both">face to face</string>
     <string name="saving">SAVE</string>
-    <string name="send_email">World you like to have a copy of your results?</string>
+    <string name="send_email">Would you like to have a copy of your results?</string>
     <string name="guide_send_email">Edit your email address and press OK to send</string>
     <string name="button_ok">OK</string>
     <string name="button_cancel">CANCEL</string>
